[gd_scene load_steps=19 format=2]

[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/OnlinePlay/OnlinePlay.gd" type="Script" id=2]
[ext_resource path="res://Collectibles/Strawberry/Strawberry.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[sub_resource type="DynamicFont" id=8]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.607843, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.694118, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.74902, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.52549, 0.52549, 0.52549, 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 4 )

[node name="OnlinePlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Info" type="Control" parent="VBoxContainer"]
margin_right = 608.0
margin_bottom = 302.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -151.0
custom_constants/separation = 50

[node name="Rank" type="VBoxContainer" parent="VBoxContainer/Info/HBoxContainer"]
margin_right = 100.0
margin_bottom = 151.0
rect_min_size = Vector2( 100, 0 )
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Info/HBoxContainer/Rank"]
margin_top = 10.0
margin_right = 100.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
custom_styles/panel = SubResource( 15 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Info/HBoxContainer/Rank/PanelContainer"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Image" type="TextureRect" parent="VBoxContainer/Info/HBoxContainer/Rank/PanelContainer/CenterContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer/Info/HBoxContainer/Rank"]
margin_top = 114.0
margin_right = 100.0
margin_bottom = 140.0
text = "IRON"
align = 1
valign = 1

[node name="Player" type="VBoxContainer" parent="VBoxContainer/Info/HBoxContainer"]
margin_left = 150.0
margin_right = 568.0
margin_bottom = 151.0
size_flags_horizontal = 3
alignment = 1

[node name="Name" type="Label" parent="VBoxContainer/Info/HBoxContainer/Player"]
margin_top = 47.0
margin_right = 418.0
margin_bottom = 73.0
text = "Iddmeister"
align = 1
uppercase = true

[node name="Stats" type="HBoxContainer" parent="VBoxContainer/Info/HBoxContainer/Player"]
margin_top = 77.0
margin_right = 418.0
margin_bottom = 103.0
custom_constants/separation = 20
alignment = 1

[node name="Winrate" type="Label" parent="VBoxContainer/Info/HBoxContainer/Player/Stats"]
margin_left = 119.0
margin_right = 203.0
margin_bottom = 26.0
text = "52 losses"
uppercase = true

[node name="Winrate2" type="Label" parent="VBoxContainer/Info/HBoxContainer/Player/Stats"]
margin_left = 223.0
margin_right = 298.0
margin_bottom = 26.0
text = "102 wins"
uppercase = true

[node name="Options" type="Control" parent="VBoxContainer"]
margin_top = 306.0
margin_right = 608.0
margin_bottom = 608.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 50

[node name="JoinQueue" type="Button" parent="VBoxContainer/Options/MarginContainer"]
margin_left = 184.0
margin_top = 172.0
margin_right = 424.0
margin_bottom = 252.0
rect_min_size = Vector2( 240, 80 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Options/MarginContainer/JoinQueue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="Status" type="Label" parent="VBoxContainer/Options/MarginContainer/JoinQueue/HBoxContainer"]
margin_left = 21.0
margin_top = 14.0
margin_right = 141.0
margin_bottom = 65.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "PLAY"
align = 1
valign = 1
autowrap = true

[node name="Divider" type="ColorRect" parent="VBoxContainer/Options/MarginContainer/JoinQueue/HBoxContainer"]
margin_left = 151.0
margin_top = 15.0
margin_right = 153.0
margin_bottom = 65.0
rect_min_size = Vector2( 2, 50 )
size_flags_vertical = 4

[node name="NumPlayer" type="VBoxContainer" parent="VBoxContainer/Options/MarginContainer/JoinQueue/HBoxContainer"]
margin_left = 163.0
margin_top = 10.0
margin_right = 219.0
margin_bottom = 70.0
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Number" type="Label" parent="VBoxContainer/Options/MarginContainer/JoinQueue/HBoxContainer/NumPlayer"]
margin_right = 56.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 9 )
text = "..."
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/Options/MarginContainer/JoinQueue/HBoxContainer/NumPlayer"]
margin_top = 34.0
margin_right = 56.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.0431373, 1, 0.192157, 1 )
custom_fonts/font = SubResource( 10 )
text = "ONLINE"
align = 1
valign = 1
uppercase = true

[node name="Connecting" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Connecting"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Connecting/CenterContainer"]
margin_left = 170.0
margin_top = 287.0
margin_right = 438.0
margin_bottom = 321.0
theme = SubResource( 6 )
custom_constants/separation = 20

[node name="ConnectionStatus" type="Label" parent="Connecting/CenterContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 34.0
text = "Connecting to Server..."
uppercase = true

[node name="Retry" type="Button" parent="Connecting/CenterContainer/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 268.0
margin_bottom = 88.0
text = "RETRY"

[node name="Back" type="Button" parent="Connecting/CenterContainer/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 268.0
margin_bottom = 88.0
text = "RETURN TO MENU"

[node name="RequestUpdate" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="toggled" from="VBoxContainer/Options/MarginContainer/JoinQueue" to="." method="_on_JoinQueue_toggled"]
[connection signal="pressed" from="Connecting/CenterContainer/VBoxContainer/Retry" to="." method="retryConnection"]
[connection signal="pressed" from="Connecting/CenterContainer/VBoxContainer/Back" to="." method="returnToMenu"]
[connection signal="timeout" from="RequestUpdate" to="." method="_on_RequestUpdate_timeout"]
